# Reynolds-Steering-Behaviours

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake-multi-platform.yml  cmake-single-platform.yml
assets/shaders/: basic.glsl.frag  basic.glsl.vert  boid.glsl.frag  boid.glsl.vert  circle.glsl.frag  circle.glsl.vert  triangleGeometry.glsl
src/: EntryPoint.cpp  main.cpp  pch.h
src/Application/: Application.cpp  Application.h  ApplicationManager.cpp  ApplicationManager.h  IApplication.h
src/Core/: BoidsManager.cpp  BoidsManager.h
src/Core/Boids/: Agent.cpp  Agent.h  Boid.cpp  Boid.h  work.txt
src/Core/Obstacle/: Obstacle.cpp  Obstacle.h
src/Core/States/: States.cpp  States.h  Wander.cpp  Wander.h  work.txt
src/Core/Utilities/: Utils.cpp  Utils.h
src/Renderer/: Draw.cpp  Draw.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Window/: ImguiWindow.cpp  ImguiWindow.h  Window.cpp  Window.h
